--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@tailwindcss/vite": "^4.1.17",
+    "@types/ramda": "^0.31.1",
     "clsx": "^2.1.1",
     "electron-updater": "^6.3.9",
+    "lucide-react": "^0.555.0",
+    "ramda": "^0.32.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
