--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,11 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "typescript.tsdk": "node_modules/typescript/lib",
-  "editor.formatOnSave": true,
+  // "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
+  },
+  "path-intellisense.mappings": {
+    "@renderer": "${workspaceFolder}/src/renderer/src"
   },
 }
