--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@tailwindcss/vite": "^4.1.17",
     "@types/ramda": "^0.31.1",
+    "antd": "^6.0.0",
     "clsx": "^2.1.1",
     "electron-updater": "^6.3.9",
+    "immer": "^11.0.1",
     "lucide-react": "^0.555.0",
     "ramda": "^0.32.0",
     "tailwind-merge": "^3.4.0",
