--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "electron-updater": "^6.3.9",
     "immer": "^11.0.1",
     "lucide-react": "^0.555.0",
+    "puppeteer-core": "^24.32.0",
+    "puppeteer-in-electron": "^3.0.5",
     "ramda": "^0.32.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
